[workspace]
resolver = "2"
members = [
  "audio",
  "backends/auto",
  "backends/dummy",
  "backends/gstreamer",
  "backends/gstreamer/render",
  "backends/gstreamer/render-unix",
  "examples",
  "examples/android/lib",
  "player",
  "servo-media",
  "servo-media-derive",
  "streams",
  "webrtc",
]

[workspace.dependencies]
glib = "0.20"
glib-sys = "0.20"
gst = { package = "gstreamer", version = "0.23" }
gst-app = { package = "gstreamer-app", version = "0.23" }
gst-audio = { package = "gstreamer-audio", version = "0.23" }
gst-base = { package = "gstreamer-base", version = "0.23" }
gst-gl = { package = "gstreamer-gl", version = "0.23" }
gst-play = { package = "gstreamer-play", version = "0.23" }
gst-sdp = { package = "gstreamer-sdp", version = "0.23" }
gst-video = { package = "gstreamer-video", version = "0.23" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.23", features = [
  "v1_18",
] }
gstreamer-gl-egl = { version = "0.23" }
gstreamer-gl-wayland = { version = "0.23" }
gstreamer-gl-x11 = { version = "0.23" }
gstreamer-sys = "0.23"
ipc-channel = "0.20"

[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
