[workspace]
resolver = "2"
members = [
  "audio",
  "backends/auto",
  "backends/dummy",
  "backends/gstreamer",
  "backends/gstreamer/render",
  "backends/gstreamer/render-unix",
  "examples",
  "examples/android/lib",
  "player",
  "servo-media",
  "servo-media-derive",
  "streams",
  "webrtc",
]

[workspace.dependencies]
glib = "0.21"
glib-sys = "0.21"
gst = { package = "gstreamer", version = "0.24" }
gst-app = { package = "gstreamer-app", version = "0.24" }
gst-audio = { package = "gstreamer-audio", version = "0.24" }
gst-base = { package = "gstreamer-base", version = "0.24" }
gst-gl = { package = "gstreamer-gl", version = "0.24" }
gst-play = { package = "gstreamer-play", version = "0.24" }
gst-sdp = { package = "gstreamer-sdp", version = "0.24" }
gst-video = { package = "gstreamer-video", version = "0.24" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.24", features = [
  "v1_18",
] }
gstreamer-gl-egl = { version = "0.24" }
gstreamer-gl-wayland = { version = "0.24" }
gstreamer-gl-x11 = { version = "0.24" }
gstreamer-sys = "0.24"
ipc-channel = { version = "0.21"}

[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
