[package]
authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]
license = "MPL-2.0"
name = "servo-media-audio"
version = "0.1.0"

[lib]
name = "servo_media_audio"
path = "lib.rs"

[dependencies]
boxfnonce = "0.1"
euclid = "0.20"
serde_derive = "1.0.66"
serde = "1.0.66"
servo_media_derive = { path = "../servo-media-derive" }
servo-media-player = { path = "../player" }
servo-media-traits = { path = "../traits" }
smallvec = "0.6.1"

[dependencies.petgraph]
version = "0.4.12"
features = ["stable_graph"]

[dependencies.byte-slice-cast]
version = "0.2"

[dependencies.num-traits]
version = "0.2"
