[package]
name = "examples"
version = "0.1.0"
license = "MPL-2.0"

[dependencies]
env_logger = "0.5"
euclid = "0.19.0"
gleam = "0.6.8"
hyper = "0.12"
rand = "0.5.0"
time = "0.1.40"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
servo-media = { path = "../servo-media" }
webrender = "0.58.0"
websocket = "0.20"
ipc-channel = "0.11"

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.18"
glutin = { git = "https://github.com/tomaka/glutin" }

[[bin]]
name = "audio_decoder"
path = "audio_decoder.rs"

[[bin]]
name = "biquad"
path = "biquad.rs"

[[bin]]
name = "channels"
path = "channels.rs"

[[bin]]
name = "channelsum"
path = "channelsum.rs"

[[bin]]
name = "offline_context"
path = "offline_context.rs"

[[bin]]
name = "panner"
path = "panner.rs"

[[bin]]
name = "params"
path = "params.rs"

[[bin]]
name = "params_settarget"
path = "params_settarget.rs"

[[bin]]
name = "params_connect"
path = "params_connect.rs"

[[bin]]
name = "params_connect2"
path = "params_connect2.rs"

[[bin]]
name = "play"
path = "play.rs"

[[bin]]
name = "play_noise"
path = "play_noise.rs"

[[bin]]
name = "player"
path = "player/main.rs"

[[bin]]
name = "simple_player"
path = "simple_player.rs"

[[bin]]
name = "oscillator"
path = "oscillator.rs"

[[bin]]
name = "constant_source"
path = "constant_source.rs"

[[bin]]
name = "simple_webrtc"
path = "simple_webrtc.rs"
