[package]
name = "examples"
version = "0.1.0"
license = "MPL-2.0"

[dependencies]
euclid = { version = "0.19.0", optional = true }
failure = { version = "0.1", optional = true }
failure_derive = { version = "0.1", optional = true }
gleam = { version = "0.6.8", optional = true }
rand = { version = "0.5.0", optional = true }
time = { version = "0.1.40", optional = true }
serde = {version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
servo-media-dummy = { path = "../backends/dummy" }
servo-media-auto = { path = "../backends/auto" }
servo-media = { path = "../servo-media" }
webrender = { version = "0.60.0", optional = true }
webrender_api = { version = "0.60.0", optional = true }
websocket = { version = "0.22", optional = true }
ipc-channel = { version = "0.14", optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.19", optional = true }
glutin = { version = "0.21", optional = true }
clap = { version = "2.33", default-features = false, optional = true }

[features]
default = []
gui = [ "euclid", "clap", "failure", "failure_derive", "gleam", "glutin", "webrender", "webrender_api", "winit" ]
player = [ "ipc-channel" ]
noise = [ "rand" ]
webrtc = [ "serde", "serde_derive", "serde_json", "websocket" ]

[[bin]]
name = "dummy"
path = "dummy.rs"

[[bin]]
name = "audio_decoder"
path = "audio_decoder.rs"

[[bin]]
name = "biquad"
path = "biquad.rs"

[[bin]]
name = "channels"
path = "channels.rs"

[[bin]]
name = "channelsum"
path = "channelsum.rs"

[[bin]]
name = "offline_context"
path = "offline_context.rs"

[[bin]]
name = "panner"
path = "panner.rs"

[[bin]]
name = "params"
path = "params.rs"

[[bin]]
name = "params_settarget"
path = "params_settarget.rs"

[[bin]]
name = "params_connect"
path = "params_connect.rs"

[[bin]]
name = "params_connect2"
path = "params_connect2.rs"

[[bin]]
name = "play"
path = "play.rs"

[[bin]]
name = "play_noise"
path = "play_noise.rs"
required-features = [ "noise" ]

[[bin]]
name = "player"
path = "player/main.rs"
required-features = [ "player", "gui" ]

[[bin]]
name = "play_media_stream"
path = "play_media_stream.rs"
required-features = [ "player" ]

[[bin]]
name = "simple_player"
path = "simple_player.rs"
required-features = [ "player" ]

[[bin]]
name = "muted_player"
path = "muted_player.rs"
required-features = [ "player" ]

[[bin]]
name = "oscillator"
path = "oscillator.rs"

[[bin]]
name = "muted_audiocontext"
path = "muted_audiocontext.rs"

[[bin]]
name = "constant_source"
path = "constant_source.rs"

[[bin]]
name = "simple_webrtc"
path = "simple_webrtc.rs"
required-features = [ "webrtc" ]

[[bin]]
name = "set_value_curve"
path = "set_value_curve.rs"

[[bin]]
name = "stereo_panner"
path = "stereo_panner.rs"

[[bin]]
name = "wave_shaper"
path = "wave_shaper.rs"

[[bin]]
name = "media_element_source_node"
path = "media_element_source_node.rs"
required-features = [ "player" ]
