[package]
name = "servo-media-player"
version = "0.1.0"
authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>",
           "Víctor Manuel Jáquez Leal <vjaquez@igalia.com>"]
license = "MPL-2.0"
edition = "2021"

[lib]
name = "servo_media_player"
path = "lib.rs"

[dependencies]
serde = "1.0.66"
serde_derive = "1.0.66"
ipc-channel = { workspace = true }

[dependencies.servo-media-streams]
path = "../streams"

[dependencies.servo-media-traits]
path = "../traits"

[dependencies.servo-media-mse]
path = "../mse"
