[package]
name = "servo-media-gstreamer"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]



[dependencies.byte-slice-cast]
version = "0.1"

[dependencies.gstreamer]
version = "0.11"

[dependencies.gstreamer-app]
version = "0.11.2"

[dependencies.gstreamer-audio]
version = "0.11"

[dependencies.num-traits]
version = "0.1"

[dependencies.servo_media]
path = "../servo-media"