[package]
name = "servo-media"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]

[lib]
name = "servo_media"

[dependencies.servo-media-audio]
path = "../audio"

[dependencies.servo-media-player]
path = "../player"

[dependencies.servo-media-webrtc]
path = "../webrtc"

[target.'cfg(any(all(target_os = "android", target_arch = "arm"), target_arch = "x86_64"))'.dependencies.servo-media-gstreamer]
path = "../backends/gstreamer"
