[package]
name = "servo-media"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]

[lib]
name = "servo_media"
path = "lib.rs"

[dependencies.servo-media-audio]
path = "../audio"

[dependencies.servo-media-player]
path = "../player"

[dependencies.servo-media-streams]
path = "../streams"

[dependencies.servo-media-webrtc]
path = "../webrtc"
