[package]
name = "servo-media"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
license = "MPL-2.0"
edition = "2024"

[lib]
name = "servo_media"
path = "lib.rs"

[dependencies]
once_cell = "1.18.0"

[dependencies.servo-media-audio]
path = "../audio"

[dependencies.servo-media-player]
path = "../player"

[dependencies.servo-media-streams]
path = "../streams"

[dependencies.servo-media-traits]
path = "../traits"

[dependencies.servo-media-webrtc]
path = "../webrtc"
