[package]
name = "servo-media-webrtc"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
license = "MPL-2.0"

[lib]
path = "lib.rs"

[dependencies]
boxfnonce = "0.1.0"
lazy_static = "1.0"
log = "0.4.6"
uuid = { version = "1.4", features = ["v4"] }

[dependencies.servo-media-streams]
path = "../streams"
