[package]
name = "servo-media-auto"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_auto"
path = "lib.rs"

[target.'cfg(any(all(target_os = "android", any(target_arch = "arm", target_arch = "aarch64")), target_arch = "x86_64"))'.dependencies.servo-media-gstreamer]
path = "../gstreamer"

[target.'cfg(not(any(all(target_os = "android", any(target_arch = "arm", target_arch = "aarch64")), target_arch = "x86_64")))'.dependencies.servo-media-dummy]
path = "../dummy"
