[package]
name = "servo-media-dummy"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_dummy"
path = "lib.rs"

[dependencies]
boxfnonce = "0.1.0"
ipc-channel = "0.14"
servo-media = { path = "../../servo-media" }
servo-media-audio = { path = "../../audio" }
servo-media-player = { path = "../../player" }
servo-media-streams = { path = "../../streams" }
servo-media-traits = { path = "../../traits" }
servo-media-webrtc = { path = "../../webrtc" }
