[package]
name = "servo-media-gstreamer"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_gstreamer"
path = "lib.rs"

[dependencies]
boxfnonce = "0.1.0"
byte-slice-cast = "0.2"
glib = "0.9"
glib-sys = "0.9"
gstreamer = "0.15"
gstreamer-app = "0.15"
gstreamer-audio = "0.15"
gstreamer-base = "0.15"
gstreamer-sys = "0.8"
gstreamer-player = "0.15"
gstreamer-sdp = "0.15"
gstreamer-video = "0.15"
gstreamer-webrtc = { version = "0.15", features = ["v1_16"] }
ipc-channel = "0.17"
lazy_static = "1.2.0"
log = "0.4"
mime = "0.3.13"
servo-media = { path = "../../servo-media" }
servo-media-audio = { path = "../../audio" }
servo-media-gstreamer-render = { path = "render" }
servo-media-player = { path = "../../player" }
servo-media-streams = { path = "../../streams" }
servo-media-traits = { path = "../../traits" }
servo-media-webrtc = { path = "../../webrtc" }
url = "2.0"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
servo-media-gstreamer-render-unix = { path = "render-unix", features = ["gl-egl", "gl-x11"] }

[target.'cfg(target_os = "android")'.dependencies]
servo-media-gstreamer-render-android = { path = "render-android" }
