[package]
name = "servo-media-gstreamer"
version = "0.1.0"
authors = ["The Servo Project Developers"]
edition = "2021"

[lib]
name = "servo_media_gstreamer"
path = "lib.rs"

[dependencies]
boxfnonce = "0.1.0"
byte-slice-cast = "0.2"
glib = "0.18"
glib-sys = "0.18"
gst = { package = "gstreamer", version = "0.21" }
gst-app = { package = "gstreamer-app", version = "0.21" }
gst-audio = { package = "gstreamer-audio", version = "0.21" }
gst-video = { package = "gstreamer-video", version = "0.21" }
gst-base = { package = "gstreamer-base", version = "0.21" }
gst-player = { package = "gstreamer-player", version = "0.21" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.21", features = ["v1_18"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.21" }
gstreamer-sys = "0.21"
ipc-channel = { workspace = true }
lazy_static = "1.2.0"
log = "0.4"
mime = "0.3.13"
once_cell = "1.18.0"
servo-media = { path = "../../servo-media" }
servo-media-audio = { path = "../../audio" }
servo-media-gstreamer-render = { path = "render" }
servo-media-player = { path = "../../player" }
servo-media-streams = { path = "../../streams" }
servo-media-traits = { path = "../../traits" }
servo-media-webrtc = { path = "../../webrtc" }
url = "2.0"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
servo-media-gstreamer-render-unix = { path = "render-unix", features = ["gl-egl", "gl-x11"] }

[target.'cfg(target_os = "android")'.dependencies]
servo-media-gstreamer-render-android = { path = "render-android" }
