[package]
name = "servo-media-gstreamer"
version = "0.1.0"
authors = ["The Servo Project Developers"]
edition = "2021"
license = "MPL-2.0"

[lib]
name = "servo_media_gstreamer"
path = "lib.rs"

[dependencies]
byte-slice-cast = "0.2"
glib = "0.18"
glib-sys = "0.18"
gst = { workspace = true }
gst-app = { workspace = true }
gst-audio = { workspace = true }
gst-video = { workspace = true }
gst-base = { workspace = true }
gst-player = { workspace = true }
gst-webrtc = { workspace = true }
gst-sdp = { workspace = true }
gstreamer-sys = { workspace = true }
ipc-channel = { workspace = true }
lazy_static = "1.2.0"
log = "0.4"
mime = "0.3.13"
once_cell = "1.18.0"
servo-media = { path = "../../servo-media" }
servo-media-audio = { path = "../../audio" }
servo-media-gstreamer-render = { path = "render" }
servo-media-player = { path = "../../player" }
servo-media-streams = { path = "../../streams" }
servo-media-traits = { path = "../../traits" }
servo-media-webrtc = { path = "../../webrtc" }
url = "2.0"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
servo-media-gstreamer-render-unix = { path = "render-unix", features = ["gl-egl", "gl-x11"] }

[target.'cfg(target_os = "android")'.dependencies]
servo-media-gstreamer-render-android = { path = "render-android" }
