[package]
name = "servo-media-gstreamer-render-android"
version = "0.1.0"
authors = ["The Servo Project Developers"]
edition = "2021"

[lib]
name = "servo_media_gstreamer_render_android"
path = "lib.rs"

[dependencies.glib]
version = "0.17"

[dependencies.gst]
package = "gstreamer"
version = "0.20"

[dependencies.gst-gl]
package = "gstreamer-gl"
version = "0.20"

[dependencies.gstreamer-gl-egl]
version = "0.20"

[dependencies.gst-video]
package = "gstreamer-video"
version = "0.20"

[dependencies.sm-player]
package = "servo-media-player"
path = "../../../player"

[dependencies.sm-gst-render]
package = "servo-media-gstreamer-render"
path = "../render"
