[package]
name = "servo-media-gstreamer-render-android"
version = "0.1.0"
authors = ["The Servo Project Developers"]
edition = "2021"

[lib]
name = "servo_media_gstreamer_render_android"
path = "lib.rs"

[dependencies]
glib = { workspace = true }
gst = { workspace = true }
gst-gl = { workspace = true }
gstreamer-gl-egl = { workspace = true }
gst-video = { workspace = true }
sm-player = { package = "servo-media-player", path = "../../../player" }
sm-gst-render = { package = "servo-media-gstreamer-render", path = "../render" }
