[package]
name = "servo-media-gstreamer-render-macos"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_gstreamer_render_macos"
path = "lib.rs"

[dependencies]
gstreamer = "0.14"
gstreamer-gl = "0.14"
gstreamer-video = "0.14"

[dependencies.servo-media-gst-gl-macos-bindings]
path = "bindings"

[dependencies.servo-media-player]
path = "../../../player"

[dependencies.servo-media-gstreamer-render]
path = "../render"
