[package]
name = "servo-media-gstreamer-render-unix"
version = "0.1.0"
authors = ["The Servo Project Developers"]
edition = "2021"

[features]
gl-egl = ["gstreamer-gl-egl"]
gl-x11 = ["gstreamer-gl-x11"]
gl-wayland = ["gstreamer-gl-wayland"]

[lib]
name = "servo_media_gstreamer_render_unix"
path = "lib.rs"

[dependencies]
glib = "0.18"
gst = { workspace = true }
gst-gl = { workspace = true }
gstreamer-gl-egl = { workspace = true, optional = true }
gstreamer-gl-x11 = { workspace = true, optional = true }
gstreamer-gl-wayland = { workspace = true, optional = true }
gst-video = { package = "gstreamer-video", version = "0.21" }
sm-player = { package = "servo-media-player", path = "../../../player" }
sm-gst-render = { package = "servo-media-gstreamer-render", path = "../render" }
