[package]
name = "servo-media-gstreamer-render"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_gstreamer_render"
path = "lib.rs"

[dependencies]
gst = { package = "gstreamer", version = "0.21" }
gst-video = { package = "gstreamer-video", version = "0.21" }

[dependencies.sm-player]
package = "servo-media-player"
path = "../../../player"
