[package]
name = "servo-media-gstreamer-render"
version = "0.1.0"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"

[lib]
name = "servo_media_gstreamer_render"
path = "lib.rs"

[dependencies]
gst = { workspace = true }
gst-video = { workspace = true }

[dependencies.sm-player]
package = "servo-media-player"
path = "../../../player"
