[package]
name = "source-element"
version = "1.0.0"
repository = "https://github.com/servo/media"
license = "MPL2.0"

[dependencies]
glib = "0.6"
glib-sys = "0.7"
gobject-subclass = "0.2"
gobject-sys = "0.7"
gst-plugin = "0.3"
gstreamer = "0.12"
gstreamer-app = "0.12"
gstreamer-sys = "0.6.1"

[lib]
name = "source_element"
path = "src/lib.rs"
