[package]
name = "servo-media-gst-gl-macos-bindings"
version = "0.1.0"
authors = ["The Servo Project Developers"]
build = "build.rs"

[lib]
name = "servo_media_gst_gl_macos_bindings"
path = "lib.rs"

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
glib = "0.8"
glib-sys = "0.9"
gstreamer = "0.14"
gstreamer-sys = "0.8"
gstreamer-gl = "0.14"
gstreamer-gl-sys = "0.8"
