[package]
name = "servo-media-gst-gl-macos-bindings"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_gst_gl_macos_bindings"
path = "lib.rs"

[dependencies]
glib = "0.8"
glib-sys = "0.9"
gstreamer = "0.14"
gstreamer-sys = "0.8"
gstreamer-gl = "0.14"
servo-media-gst-gl-macos-bindings-sys = { path = "../bindings-sys" }

[features]
v1_16 = ["servo-media-gst-gl-macos-bindings-sys/v1_16"]
